style.css
:root{
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    margin:0px;
    padding: 0px;
    box-sizing: border-box;
}

body{
    margin:0px;
    background-color: #ECEAEA;
}

@font-face {
    font-family: 'Intro Rust G Base 2 Line';
    src: url('font-index/IntroRustG-Base2Line.woff2') format('woff2'),
        url('font-index/IntroRustG-Base2Line.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Intro Head R Base';
    src: url('font-index/IntroHeadR-Base.woff2') format('woff2'),
        url('font-index/IntroHeadR-Base.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}


.main-wrapper, .aside, .main {
    padding:0px;
    margin:0px;
    
}

.main-wrapper{
    min-height: 100vh;
    display: flex;

}


.aside{
    margin:0px;
    min-width:45%;
    position:relative;  
    .image-container{  
        img{
            box-sizing: border-box;
            width: 100%;
            height:100vh;
            object-fit:cover;
        }
    }
}


.aside>.text-logo{
    display: flex;
    justify-content: center;
    position:absolute;
    top:30%;
    background-color: black;
    color:white;
    width:100%;
    height:10%;
    background-color: rgba(64, 153, 235, 0.4);
    gap:10px;
}

.text-logo{

    span{
        display: block;
        opacity:1;
        align-self: center;
        font-size:larger;
        font-weight: bold;
        font-family: "Intro Head R Base";
        font-size: 2rem;
        letter-spacing: 0.2rem;
       
    }   
    img{
        height: 40%;
        width: 40;
        align-self: center;
        border-radius: 50px;
    }
}

.credit-photo{
    position:absolute;
    top:95%;
    right:30%;
    color: white;
    font-size: small;
    opacity: 0.3;
    min-width: 40%;
}
.main{
    min-width: auto;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap:15px;
    background-color: rgba(149, 149, 144, 0.2);
}



.user-info-form, .top-article, .top-article-1, .top-article-2{
    text-wrap: pretty; 
}

.top-article-1{
    background-color:rgba(64, 153, 235, 0.2);
    h3{
        font-size: 2rem;
    }
    

    
    sectio{
        margin-top:5%;
        border-bottom: 3px solid #959d9c;

        
    }
}


.top-article-2{
    background-color:rgba(64, 153, 235, 0.2);
    border-bottom: 3px solid #B4D6D3;

}
.top-article-1>h3>div{
    background-color: #B2FFD6;
    width: fit-content;
    display: inline-block;
}



.user-info-form{
    display: flex;
    flex-direction: column;
    gap:20px;
    justify-content: center;
    font-family: 'Poppins', sans-serif;
    border-bottom: 3px solid #B4D6D3;
    min-height: fit-content;
    min-width: auto;
    background-color:rgba(64, 153, 235, 0.2);

    .user-info-fieldset{
        display: flex;
        justify-content: center;
        align-items: center;
        gap:5%;
        border: none;
    }
    label{
        display: block;
    }
    

}


.side-1, .side-2{
    display: flex;
    flex-direction: column;
    gap:10px;
}
.top-article{
    margin-bottom:2%;
    font-family: 'Poppins', sans-serif;
    font-size: 1.5rem;
    color: #2c3e50;
    text-transform: uppercase; 
    letter-spacing: 2px;
    text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: auto;
    background-color:rgba(183, 182, 168, 0.2);

   
    
}

.submit-container{
    display: block;
    margin : 0px auto;
    width:150px;
    height: auto;
    button{
        width:100%;
        background-color: #9999C3;
        color: white;
        border-radius:  4px;
        height:2rem;
        
    }
}

input:hover{
    border-color: rgb(115, 244, 171, 0.8);
}



input:user-invalid{
    border-color :red;
}

input:focus{
    outline: none;
    border-color:blue;
    box-shadow:  0 4px 10px -1px black;
}

input:user-valid{
    border-color: green;
        box-shadow:  0 4px 10px -1px green;

}



.ask-already-acc{
    margin-top: 1%;
    display: block;
    text-align: center;
    font-size: 0.8rem;
    a{  
        text-decoration: none;
        strong{
        color:#7B8CDE;
        
        }

    }
    
}




@media screen and (max-width: 768px) {
    .aside {
        min-width: 100%;
    }
    .main-wrapper {
        flex-direction: column;
        padding:1px;
    }
    .user-info-fieldset {
        flex-direction: column;
        gap: 10px;
    }
    .top-article-1>h3{
        font-size: 1rem;;
    }
    .credit-photo{
        right:30%;
        left:30%;
        top:90%;
        text-align: center;
    }
    
}

 

@media screen and (min-width: 769px) and (max-width: 1068px) {

    .top-article {
        font-size: 1.5rem;
        letter-spacing: 1px;
    }
    .top-article-1 > h3 {
        font-size: 1.5rem;
    }

}

